Fixes left alignment when radios and checkboxes are in lists.

--- a/src/sass/components/_checkboxes.scss
+++ b/src/sass/components/_checkboxes.scss
@@ -6,7 +6,10 @@ input[type="checkbox"] {
 
 input[type="checkbox"] + label {
     font-size: $sm;
-    margin-left: .4rem;
+    /**
+     * Helps visualy align checkbox lists
+     */
+    margin-left: .2rem;
     font-weight: 400;
 
     &:before {
