--- a/src/sass/components/_radios.scss
+++ b/src/sass/components/_radios.scss
@@ -10,7 +10,7 @@ input[type="radio"] + label {
     /**
     * Visually adjust due to the bigger hit area for radio buttons.
     */
-    margin-left: .2rem;
+    margin-left: .125rem;
 
     &:before {
         /**
